--- a/_posts/2025-01-06-RAG2.md
+++ b/_posts/2025-01-06-RAG2.md
@@ -1,5 +1,5 @@
 ---
-title: Create a LangChain using Ollama
+title: LangChain using Ollama.
 description: Let's write code to create a LangChain using Ollama.
 author: DS2Man
 date: 2025-01-06 11:00:00 +0000
@@ -13,9 +13,6 @@ tags:
   - Ollama
 math: true
 pin: true
-related_posts:
-    - _posts/2025-01-04-RAG-Prologue.md
-    - _posts/2025-01-06-RAG-LangChain.md
 ---
 
 In the previous post, we implemented LangChain using Hugging Face transformers. However, using **Ollama** to build LangChain enables the implementation of most features in a way that is very similar to using ChatOpenAI. Ollama allows large models to be quantized, reducing memory usage and improving speed (related term: GGUF). More details on this will be shared in another post. In this session, we’ll create a LangChain using Ollama.
@@ -29,6 +26,7 @@ In the previous post, we implemented LangChain using Hugging Face transformers. 
 With Ollama, you can run open-source large language models like Llama3 locally.
 Preparation,
 1. Download and install Ollama on a supported platform (Mac/Linux/Windows).  
+   	 [Ollama](https://ollama.com)   
 	 [Ollama Discord](https://discord.com/invite/ollama)  
 	 [Ollama model github](https://github.com/ollama/ollama)  
 	 [Ollama model library](https://ollama.com/library)
