--- a/_posts/2025-01-06-RAG2.md
+++ b/_posts/2025-01-06-RAG2.md
@@ -1,16 +1,15 @@
 ---
-title: LangChain using Ollama.
-description: Let's write code to create a LangChain using Ollama.
+title: LangChain using ChatOllama.
+description: Let's write code to create a LangChain using ChatOllama.
 author: DS2Man
 date: 2025-01-06 11:00:00 +0000
 categories:
   - Journey into Generative AI
 tags:
-  - LLM
   - RAG
+  - ChatOllama
   - LangChain
   - LCEL
-  - Ollama
 math: true
 pin: true
 ---
