--- a/_posts/2025-01-07-RAG3.md
+++ b/_posts/2025-01-07-RAG3.md
@@ -1,20 +1,20 @@
 ---
 title: LangChain using My Own Custom class, ChatBrainAI.
-description: Let's write code to create a LangChain using My Own Custom class,ChatBrainAI or ChatOllama
+description: Let's write code to create a LangChain using My Own Custom class,ChatBrainAI
 author: DS2Man
 date: 2025-01-07 11:00:00 +0000
 categories:
   - Journey into Generative AI
 tags:
-  - LLM
   - RAG
+  - ChatBrainAI
   - LangChain
   - LCEL
 math: true
 pin: true
 ---
 
-In the previous post, we explored how to configure LangChain using Hugging Face Transformers. I created my own custom class that can be used similarly to the `ChatOpenAI()` or `ChatOllama` class. I hope it proves to be useful wherever needed. If there are any issues or corrections, please feel free to reach out.
+In the previous post, we explored how to configure LangChain using Hugging Face Transformers. I created my own custom class that can be used similarly to the ChatOpenAI() or ChatOllama() class. I hope it proves to be useful wherever needed. If there are any issues or corrections, please feel free to reach out. 
 
 <!--
 이전 포스트에서 우리는 Hugging face transformers를 활용해서 LangChain을 구성해봤다. 나는 ChatOpenAI() 클래스처럼 사용할 수 있도록 나만의 클래스를 만들어 보았다. 필요한 곳에 유용하게 사용되었으면 합니다. 혹시 잘못된 부분이 있다면 연락주세요.
@@ -174,7 +174,7 @@ The capital of the United States is Washington, D.C.
 ```
 
 ~~~python
-response = chain.invoke({"question": "너의 이름은?"})
+response = chain.invoke({"question": "What is the capital of the United States?"})
 invoke_response(response, "<|end_header_id|>")
 ~~~
 
