--- a/_posts/2025-01-05-RAG1.md
+++ b/_posts/2025-01-05-RAG1.md
@@ -6,11 +6,10 @@ date: 2025-01-05 11:00:00 +0000
 categories:
   - Journey into Generative AI
 tags:
-  - LLM
   - RAG
+  - Hugging Face Transformers.
   - LangChain
   - LCEL
-  - HuggingFace
 math: true
 pin: true
 ---
