--- a/_posts/2025-01-08-RAG4.md
+++ b/_posts/2025-01-08-RAG4.md
@@ -15,11 +15,14 @@ math: true
 pin: true
 ---
 
-The prompt templates are used via **PromptTemplate.from_template()** or **ChatPromptTemplate.from_message()**.  **The PromptTemplate** is primarily used for general text-based models, while **ChatPromptTemplate** is mainly used for chat-based models.   
+Previous posts explained only using **PromptTemplate.from_template()**.   
+The prompt templates are used via **PromptTemplate.from_template()** or **ChatPromptTemplate.from_message()**.  **The PromptTemplate** is primarily used for general text-based models, while **ChatPromptTemplate** is mainly used for chat-based models.  
 In this post, I will explain using the [gemma-2-2b-it](https://huggingface.co/google/gemma-2-2b-it) model registered on Hugging Face, leveraging the `ChatBrainAI()` class I previously created.
 
 <!--
-프롬프트 템플릿은 PromptTemplate.from_template() or ChatPromptTemplate.from_message() 사용합니다. 일반 텍스트 기반 모델에 주로 사용되는 템플릿은 PrompTemplate이고, 채팅 기반 모델에 주로 사용되는 템플릿은 ChatPromptTemplate 이다. 이번 글에서는 앞서 내가 만든 ChatBrainAI() 클래스를 활용해서, 허깅페이스에 등록된 [gemma-2-2b-it](https://huggingface.co/google/gemma-2-2b-it) 모델을 가지고 설명하려합니다.
+이전 글들은 단지 PromptTemplate.from_template()만을 가지고 설명했었다. 
+프롬프트 템플릿은 PromptTemplate.from_template() or ChatPromptTemplate.from_message() 사용합니다. 일반 텍스트 기반 모델에 주로 사용되는 템플릿은 PrompTemplate이고, 채팅 기반 모델에 주로 사용되는 템플릿은 ChatPromptTemplate 이다. 
+이번 글에서는 앞서 내가 만든 ChatBrainAI() 클래스를 활용해서, 허깅페이스에 등록된 [gemma-2-2b-it](https://huggingface.co/google/gemma-2-2b-it) 모델을 가지고 설명하려합니다.
 -->
 
 ## *Understanding PromptTemplate*
@@ -55,8 +58,12 @@ prompt = PromptTemplate.from_template(
 
 chain = prompt | llm
 
-response = chain.stream({"question": "What is the capital of the United States?"})
+question = "What is the capital of the United States?"
+response = chain.stream({"question": question})
 stream_response(response)
+
+# response = chain.invoke({"question": question})
+# invoke_response(response, "<start_of_turn>model")
 ~~~
 
 ```
@@ -88,8 +95,12 @@ prompt = ChatPromptTemplate.from_messages(
 
 chain = prompt | llm
 
-response = chain.stream({"question": "What is the capital of the United States?"})
+question = "What is the capital of the United States?"
+response = chain.stream({"question": question})
 stream_response(response)
+
+# response = chain.invoke({"question": question})
+# invoke_response(response, "<start_of_turn>model")
 ~~~
 
 ```
