--- a/_posts/2025-01-09-RAG5.md
+++ b/_posts/2025-01-09-RAG5.md
@@ -76,7 +76,7 @@ response = chain.stream({"question": question})
 stream_response(response)
 
 # response = chain.invoke({"question": question})
-# invoke_response(response, "Assistant:")
+# invoke_response(response, suffix)
 ~~~
 
 ```
@@ -115,7 +115,7 @@ question = "What is the capital of the United States?"
 response = chain.stream({"question": question})
 stream_response(response)
 
-# response = chain.invoke({"question": "중국의 수도는?"})
+# response = chain.invoke({"question": question})
 # invoke_response(response, "Answer:")
 ~~~
 
