--- a/_posts/2025-01-10-RAG6.md
+++ b/_posts/2025-01-10-RAG6.md
@@ -15,10 +15,8 @@ math: true
 pin: true
 ---
 
-In the previous post, I used `ChatBrainAI()` to apply various general prompts and conversational prompts to configure LangChain.  
-Going forward, I plan to build all projects using **ChatOllama()**.  
-In the this post, I aim to apply general prompts and conversational prompts to configure LangChain.   
-Additionally, both general and conversational prompts seem to work in the same format across most LLM models supported by Ollama. Thanks to optimization for supported models, the inference speed is notably fast.
+In the previous post, I used `ChatBrainAI()` to apply various general prompts and conversational prompts to configure LangChain. Going forward, I plan to build all projects using **ChatOllama()**.   
+In the this post, I aim to apply general prompts and conversational prompts to configure LangChain.  Additionally, both general and conversational prompts seem to work in the same format across most LLM models supported by Ollama. Thanks to optimization for supported models, the inference speed is notably fast.
 
 <!--
 이전 글에서는 ChatBrainAI()를 활용해서 다양한 일반형 Prompt와 대화형 Prompt를 적용, LangChain을 구성했었다.
