--- a/_posts/2025-01-07-RAG3.md
+++ b/_posts/2025-01-07-RAG3.md
@@ -50,17 +50,19 @@ Ollama를 사용하면 Llama3와 같은 오픈 소스 대규모 언어 모델을
 ## *1. Steps to Build LangChain Using Ollama*
 
 1. Load the **Ollama model**.
+   - For reference, `ChatOllama()` and `OllamaLLM()` seem to have the same functionality, with almost no noticeable differences.
 2. Generate a **prompt**
 3. Create a **LangChain**
 
 ~~~python
-from langchain_ollama import ChatOllama
+from langchain_ollama import ChatOllama,OllamaLLM
 from langchain_core.output_parsers import StrOutputParser
 from langchain_core.prompts import ChatPromptTemplate
 from langchain_core.prompts import PromptTemplate
 
 # Step 1: Load the Ollama model.
 llm = ChatOllama(model="gemma:7b")
+# llm = OllamaLLM(model="gemma:7b")
 
 # Step 2: Generate a prompt
 template = """
