--- a/_posts/2025-01-09-RAG5.md
+++ b/_posts/2025-01-09-RAG5.md
@@ -91,8 +91,8 @@ It is a template primarily used for chat-based conversational models, with roles
 |Model|Response|Notes|
 |---|:---:|:---|
 |gemma-2-2b-it|ㅇ|-|
-|Llama-3.2-3B-Instruct|x|반복 질문을 내부적으로 계속함|
-|EVE-Korean-Instruct-2.8B-v1.0|x|쓸데없는 답변이 많이 발생|
+|Llama-3.2-3B-Instruct|x|Repeatedly asking the same question internally.|
+|EVE-Korean-Instruct-2.8B-v1.0|x|A lot of unnecessary answers are generated.|
 
 <!--
 채팅 기반 대화형 모델에 주요 사용되는 템플릿입니다. Role 구분(system, user, assistant)되어 있습니다. 특히 대화 내용을 기반으로 한 Prompt 구현은 ChatPromptTemplate.from_message() 로 주로 합니다. 
