--- a/_posts/2025-01-06-RAG2.md
+++ b/_posts/2025-01-06-RAG2.md
@@ -20,6 +20,20 @@ In the previous post, we explored how to configure LangChain using Hugging Face 
 이전 포스트에서 우리는 Hugging face transformers를 활용해서 LangChain을 구성해봤다. 나는 ChatOpenAI() 클래스처럼 사용할 수 있도록 나만의 클래스를 만들어 보았다. 필요한 곳에 유용하게 사용되었으면 합니다. 혹시 잘못된 부분이 있다면 연락주세요.
 -->
 
+## *Directory*
+
+~~~bash
+└── ai 
+ ├── local
+ │ └── langchain_brainai.py 
+ │  ├── ChatBrainAI(AIModelBase)
+ │  ├── stream_response()
+ │  └── invoke_response()
+ └── aibase.py
+   └── AIModelBase(metaclass=ABCMeta)
+~~~
+
+
 ## *My Own Custom class, ChatBrainAI*
 
 ~~~python
