--- a/_posts/2025-01-11-RAG7.md
+++ b/_posts/2025-01-11-RAG7.md
@@ -23,6 +23,20 @@ Prompt는 앞으로 역활에 따라 다양하게 재사용될 수 있기 때문
 이번글에서는 load_prompt() 메서드와 내가 만든 load_chat_prompt() 매서드를 활용한 예제를 공유하겠다.
 -->
 
+## *Directory*
+
+~~~bash
+└── ai 
+ ├── local
+ │ └── langchain_brainai.py 
+ │  ├── ChatBrainAI(AIModelBase)
+ │  ├── stream_response()
+ │  ├── invoke_response()
+ │  └── load_chat_prompt()
+ └── aibase.py
+   └── AIModelBase(metaclass=ABCMeta)
+~~~
+
 ## *Applying PromptTemplate Files*
 
 - Testing Model : gemma2:latest, llama3.2-vision:latest, llava:7b, gemma:7b, deepseek-r1:14b
@@ -89,6 +103,7 @@ selected_model_catogory = "OpenAI&Ollama"
 llm = ChatOllama(model=selected_model)
 
 prompt = load_chat_prompt(f"prompts/{selected_model_catogory}/basic_chat.json")
+# [basic_chat.json]
 # [
 #   {"role": "system", "message": "You are a friendly AI assistant. Your name is DS2Man. Please answer questions briefly."},
 #   {"role": "human", "message": "{question}"}
