--- a/_posts/2025-01-27-Docker1.md
+++ b/_posts/2025-01-27-Docker1.md
@@ -17,15 +17,8 @@ pin: true
 WSL2 lets developers run a GNU/Linux environment -- including most command-line tools, utilities, and applications -- directly on Windows, unmodified, without the overhead of a traditional virtual machine or dual-boot setup.  
 This document is based on Microsoft's WSL documentation ([https://learn.microsoft.com/en-us/windows/wsl/](https://learn.microsoft.com/en-us/windows/wsl/)).
 
-<img src="/assets/img/2025-01-27-Docker1_1.png" width="350" height="350"/>
-_WSL2 Intro(Source: [WikiDocs](https://wikidocs.net/252140))_
-
-
-<!--
 ![WSL2 Intro](/assets/img/2025-01-27-Docker1_1.png)
 _WSL2 Intro(Source: [WikiDocs](https://wikidocs.net/252140))_
--->
-
 
 <!--
 WSL(Windows Subsystem for Linux)란 윈도우의 가상화 기능(Hyper-V)을 사용해, 윈도우 위에서 가상머신을 생성 없이 리눅스를 사용할 수 있도록 도와주는 기술입니다. (WSL2는 Hyper-V 기반으로 동작하는 거지 Hyper-V를 사용하는 것은 아닙니다.!)
@@ -37,7 +30,9 @@ MS의 WSL문서(https://learn.microsoft.com/en-us/windows/wsl/) 기준으로 작
 ## *Install WSL2*
 
 - Install WSL2(default OS : Ubuntu)   
-	To use the command below, you must be running Windows 10 version 2004 or later (build 19041 or higher) or Windows 11([Installation page](https://learn.microsoft.com/en-us/windows/wsl/install)). If you are using an earlier version, refer to the [manual installation page](https://learn.microsoft.com/en-us/windows/wsl/install-manual). (See the screenshot below.)
+	To use the command below, you must be running Windows 10 version 2004 or later (build 19041 or higher) or Windows 11([Installation page](https://learn.microsoft.com/en-us/windows/wsl/install)). If you are using an earlier version, refer to the [manual installation page](https://learn.microsoft.com/en-us/windows/wsl/install-manual). (See the screenshot below.)    
+	`wsl --install`        
+	`wsl --set-default-version 2(if the version is not 2)`
 
 <!--
 아래 명령을 사용하려면 Windows 10 버전 2004 이상(빌드 19041 이상) 또는 Windows 11을 실행해야 합니다. 이전 버전을 사용 중인 경우 [수동 설치 페이지](https://learn.microsoft.com/ko-kr/windows/wsl/install-manual)를 참조하세요.
@@ -45,13 +40,33 @@ MS의 WSL문서(https://learn.microsoft.com/en-us/windows/wsl/) 기준으로 작
 
 ```bash
 # Check list of installable items
-wsl -l -o 
+PS C:\Users\ycjang> wsl -l -o
+다음은 설치할 수 있는 유효한 배포판 목록입니다.
+'wsl.exe --install <Distro>'를 사용하여 설치합니다.
+
+NAME                            FRIENDLY NAME
+Ubuntu                          Ubuntu
+Debian                          Debian GNU/Linux
+kali-linux                      Kali Linux Rolling
+Ubuntu-18.04                    Ubuntu 18.04 LTS
+Ubuntu-20.04                    Ubuntu 20.04 LTS
+Ubuntu-22.04                    Ubuntu 22.04 LTS
+Ubuntu-24.04                    Ubuntu 24.04 LTS
+OracleLinux_7_9                 Oracle Linux 7.9
+OracleLinux_8_7                 Oracle Linux 8.7
+OracleLinux_9_1                 Oracle Linux 9.1
+openSUSE-Leap-15.6              openSUSE Leap 15.6
+SUSE-Linux-Enterprise-15-SP5    SUSE Linux Enterprise 15 SP5
+SUSE-Linux-Enterprise-15-SP6    SUSE Linux Enterprise 15 SP6
+openSUSE-Tumbleweed             openSUSE Tumbleweed
 # Install WSL, default linux(Ubuntu)
-wsl --install
+PS C:\Users\ycjang> wsl --install
 # Check the running WSL version
-wsl -l -v
+PS C:\Users\ycjang> wsl -l -v
+  NAME      STATE           VERSION
+* Ubuntu    Stopped         2
 # Set WSL version 2 if the version is not 2.
-wsl --set-default-version 2
+PS C:\Users\ycjang> wsl --set-default-version 2
 ```
 
 ![WSL2 Installation](/assets/img/2025-01-27-Docker1_2.png)
@@ -76,7 +91,7 @@ passwd: password updated successfully
 root@DESKTOP-B7GM3C5:/mnt/c/Users/ycjang#
 ```
 
-- If you want to omit the `sudo` command for your account (`jaoneol`), proceed as follows.    
+-  Let's omit the `sudo` command for your account (`jaoneol`), proceed as follows.    
 	Add `jaoneol ALL=(ALL:ALL) ALL` to `/etc/sudoers`.
 
 <!--
@@ -109,15 +124,18 @@ jaoneol ALL=(ALL:ALL) ALL # Add this part.
 
 ```
 
-- Change the APT repository (`ubuntu.sources`) to a domestic server.    
-	Change `:%s/archive.ubuntu.com/mirror.kakao.com/g` to `etc/apt/sources.list.d/ubuntu.sources`.    
+- Let's Change the APT repository (`ubuntu.sources`) to a domestic server.     
+	Modify the file(`etc/apt/sources.list.d/ubuntu.sources`)'s contents using the following command.    
+	`:%s/archive.ubuntu.com/mirror.kakao.com/g`    
+	`:%s/security.ubuntu.com/mirror.kakao.com/g`
+
 	Below is a list of servers operating in our country.
 
 |Provider|URL|Remarks|
 |---|---|---|
 |Ubuntu (basic)|[archive.ubuntu.com](https://archive.ubuntu.com/)||
 |Ubuntu (KOR basic)|[kr.archive.ubuntu.com](http://kr.archive.ubuntu.com/)|Provided by KAIST|
-|Kakao|[mirror.kakao.com](http://mirror.kakao.com/)|Fastest|
+|Kakao|[mirror.kakao.com](http://mirror.kakao.com/)|Fastest|    
 
 <!--
 apt repository(source.list) 국내서버로 변경하기
@@ -158,17 +176,42 @@ Components: main universe restricted multiverse
 Signed-By: /usr/share/keyrings/ubuntu-archive-keyring.gpg
 ```
 
-- @@@@
-- 
-ddddddddddddddddddddddddddd
+- Let's check the wsl's configure(`/etc/wsl.conf`) to use 'systemd'
+	`systemd(system daemon)` is a daemon that replaces the init process by being the first to be created after a Unix system boots and then executing other processes.    
+	In Ubuntu 24.04, systemd is enabled by default, but it is not in older versions. This was included for verification purposes.
+	Add `[boot] systemd=true` to `/etc/wsl.conf`.
 
 <!--
-ddddddddddddddddddddddddddd
+systemd(system daemon)은 Unix 시스템이 부팅후에 가장 먼저 생성된 후에 다른 프로세스를 실행하는 init 역할을 대체하는 데몬입니다
+Ubuntu-24.04에는 기본적으로 systemd가 활성화 되어 있으나, 과거 버전은 안되어 있다. 확인차 넣어둔 내용이다.
 -->
 
 ```bash
-@@@@@
+##################
+# vi /etc/wsl.conf
+##################
+# systemd is enable
+[boot]
+systemd=true
 ```
+
+```bash
+jaoneol@DESKTOP-B7GM3C5:~$ ps -ef | grep systemd
+root          50       1  0 20:37 ?        00:00:00 /usr/lib/systemd/systemd-journald
+root          80       1  0 20:37 ?        00:00:00 /usr/lib/systemd/systemd-udevd
+systemd+     102       1  0 20:37 ?        00:00:00 /usr/lib/systemd/systemd-resolved
+systemd+     103       1  0 20:37 ?        00:00:00 /usr/lib/systemd/systemd-timesyncd
+message+     146       1  0 20:37 ?        00:00:00 @dbus-daemon --system --address=systemd: --nofork --nopidfile --systemd-activation --syslog-only
+root         153       1  0 20:37 ?        00:00:00 /usr/lib/systemd/systemd-logind
+jaoneol      322       1  0 20:37 ?        00:00:00 /usr/lib/systemd/systemd --user
+jaoneol@DESKTOP-B7GM3C5:~$
+```
+
+
+<!--
+다음 내용은 추가적으로 확인하고 내용 보강하자.!
+필요 패키지 설치 : apt-get install -y ubuntu-restricted-extras net-tools git strongswan iperf ssh libssl-dev libncurses5 libncurses5-dev bin86 ftpd wireshark speedometer mpv vim cmake build-essential WSL 메모리 제한 (.wslconfig 파일 내용) : [wsl2] memory=4GB
+-->
 
 ## *Install Windows Terminal(Recommended)*
 
