--- a/_posts/2025-01-27-Docker1.md
+++ b/_posts/2025-01-27-Docker1.md
@@ -1,5 +1,5 @@
 ---
-title: WSL2 Installation, Running Linux on Windows
+title: WSL2, Running Linux on Windows
 description: Let's Install Linux on Windows 10 (11) Using WSL Virtualization.
 author: DS2Man
 date: 2025-01-27 11:00:00 +0000
