--- a/_posts/2025-01-27-Docker1.md
+++ b/_posts/2025-01-27-Docker1.md
@@ -213,7 +213,7 @@ jaoneol@DESKTOP-B7GM3C5:~$
 필요 패키지 설치 : apt-get install -y ubuntu-restricted-extras net-tools git strongswan iperf ssh libssl-dev libncurses5 libncurses5-dev bin86 ftpd wireshark speedometer mpv vim cmake build-essential WSL 메모리 제한 (.wslconfig 파일 내용) : [wsl2] memory=4GB
 -->
 
-## *Install Windows Terminal(Recommended)*
+## *Install Windows Terminal*
 
 Microsoft recommends installing Windows Terminal. The installation manual provides various methods, but we will proceed using the CLI([Installing and running Windows Terminal](https://github.com/microsoft/terminal#other-install-methods)).
 
@@ -227,3 +227,14 @@ winget install --id Microsoft.WindowsTerminal -e
 
 ![Windows Terminal Installation](/assets/img/2025-01-27-Docker1_4.png)
 _Windows Terminal Installation_
+
+## *Use MobaXterm(Recommended)*
+
+Microsoft recommended installing Windows Terminal, but I plan to use **MobaXterm**, a highly useful tool for working in a Linux environment. The connection is simple.
+
+<!--
+MS사에서는 Windows Terminal 설치를 권장했지만, Linux 환경을 사용할 때 매우 유용한 Tools인 MobaXterm으로 활용하고자 한다.접속은 간단하다. 
+-->
+
+![Connection method](/assets/img/2025-01-27-Docker1_6.png)
+_Connection method_
