--- a/_posts/2025-01-27-Docker1.md
+++ b/_posts/2025-01-27-Docker1.md
@@ -73,6 +73,133 @@ PS C:\Users\ycjang> wsl --set-default-version 2
 ![WSL2 Installation](/assets/img/2025-01-27-Docker1_3.png)
 _WSL2 Installation_
 
+## *Change the default path of WSL2*
+
+The default path for the virtual environment that constitutes WSL is the C drive. If the C drive has limited space, it can restrict Docker image storage. Therefore, I want to change the default path to a specific directory on the D drive.
+
+<!--
+WSL을 구성하는 가상 환경의 기본 경로가 C드라이브이다. C드라이브의 용량이 작으면 Docker 이미지 저장에 한계가 있다. 그래서 기본 경로를 D드라이브의 특정 디렉토리로 변경하고자 한다.
+-->
+
+- The default path for WSL is as follows. Let's assume that Ubuntu 24.04 is being used in WSL.
+
+<!--
+WSL의 기본 경로는 다음과 같다. WSL에서 Ubuntu-24.04 버전을 사용한다고 가정한다.
+-->
+
+```bash
+C:\Users\ycjang\AppData\Local\Packages\CanonicalGroupLimited.Ubuntu_79rhkp1fndgsc\LocalState\ext4.vhdx
+```
+
+- Ideally, it would be best to simply move the VHDX file to the D drive, but since Ubuntu OS was installed while enabling WSL, it was installed as a Windows App and may have other dependencies. Therefore, after moving the files to a different path, additional configurations need to be updated. <ins>Since manually checking and handling all these tasks can be complex, there is a project on GitHub that provides a script for this process.</ins>    
+	`wsl --shutdown`    
+	`git clone https://github.com/pxlrbt/move-wsl.git`    
+	`Set-ExecutionPolicy Unrestricted`    
+	`.\move-wsl.ps1`    
+	`ubuntu config --default-user jaoneol`    
+
+<!--
+단순히 vhdx 파일만 D드라이브로 옮기면 좋겠지만, WSL을 활성화하면서 우분투 OS를 설치했다.
+즉, 윈도우 App 형태로 설치한 것이며 다른 의존성이 존재할 수 있으므로, 파일을 다른 경로로 옮기고 나서 부가적인 설정들을 변경해야 한다. 이러한 작업들을 모두 체크해서 진행하긴 어렵고, GitHub에 스크립트 파일을 제공하는 프로젝트가 있다.
+https://github.com/pxlrbt/move-wsl
+-->
+
+```bash
+PS C:\Users\ycjang> wsl -l -v
+  NAME      STATE           VERSION
+* Ubuntu    Running         2
+PS C:\Users\ycjang> wsl --shutdown
+PS C:\Users\ycjang> wsl -l -v
+  NAME      STATE           VERSION
+* Ubuntu    Stopped         2
+PS C:\Users\ycjang>
+```
+
+```bash
+PS C:\Users\ycjang> cd d:
+PS D:\> cd .\01.WSL2\
+PS D:\01.WSL2> git clone https://github.com/pxlrbt/move-wsl.git
+Cloning into 'move-wsl'...
+remote: Enumerating objects: 216, done.
+remote: Counting objects: 100% (51/51), done.
+remote: Compressing objects: 100% (32/32), done.
+remote: Total 216 (delta 24), reused 40 (delta 17), pack-reused 165 (from 1)
+Receiving objects: 100% (216/216), 116.42 KiB | 8.96 MiB/s, done.
+Resolving deltas: 100% (108/108), done.
+PS D:\01.WSL2> cd .\move-wsl\
+PS D:\01.WSL2\move-wsl> .\move-wsl.ps1
+.\move-wsl.ps1 : 이 시스템에서 스크립트를 실행할 수 없으므로 D:\01.WSL2\move-wsl\move-wsl.ps1 파일을 로드할 수 없습니다
+. 자세한 내용은 about_Execution_Policies(https://go.microsoft.com/fwlink/?LinkID=135170)를 참조하십시오.
+위치 줄:1 문자:1
++ .\move-wsl.ps1
++ ~~~~~~~~~~~~~~
+    + CategoryInfo          : 보안 오류: (:) [], PSSecurityException
+    + FullyQualifiedErrorId : UnauthorizedAccess
+
+# Since PowerShell's Execution Policy is set to Restricted, 
+# changing it to Unrestricted allows scripts and configuration files to be executed.
+PS D:\01.WSL2\move-wsl> Set-ExecutionPolicy Unrestricted
+```
+
+```bash
+# Running it again will proceed normally.
+PS D:\01.WSL2\move-wsl> .\move-wsl.ps1
+Getting distros...
+Select distro to move:
+1: Ubuntu
+1
+Enter WSL target directory:
+d:\01.WSL2
+Move Ubuntu to "d:\01.WSL2"? (Y|n): Y
+Exporting VHDX to "d:\01.WSL2\Ubuntu.tar" ...
+내보내기가 진행 중입니다. 이 작업은 몇 분 정도 걸릴 수 있습니다.
+작업을 완료했습니다.
+Unregistering WSL ...
+Importing Ubuntu from d:\01.WSL2...
+가져오기가 진행 중입니다. 이 작업은 몇 분 정도 걸릴 수 있습니다.
+작업을 완료했습니다.
+Cleaning up ...
+Done!
+PS D:\01.WSL2\move-wsl>
+```
+
+![Change the default path of WSL2](/assets/img/2025-01-27-Docker1_7.png)
+_Change the default path of WSL2_
+
+```bash
+PS C:\Users\ycjang> wsl
+Windows PowerShell
+Copyright (C) Microsoft Corporation. All rights reserved.
+새로운 크로스 플랫폼 PowerShell 사용 https://aka.ms/pscore6
+
+ * Documentation:  https://help.ubuntu.com
+ * Management:     https://landscape.canonical.com
+ * Support:        https://ubuntu.com/pro
+
+ System information as of Sun Feb  2 01:25:32 KST 2025
+
+  System load:  0.0                 Processes:             74
+  Usage of /:   0.2% of 1006.85GB   Users logged in:       0
+  Memory usage: 1%                  IPv4 address for eth0: 192.168.73.128
+  Swap usage:   0%
+
+ * Strictly confined Kubernetes makes edge and IoT secure. Learn how MicroK8s
+   just raised the bar for easy, resilient and secure K8s cluster deployment.
+
+   https://ubuntu.com/engage/secure-kubernetes-at-the-edge
+
+This message is shown once a day. To disable it please create the
+/root/.hushlogin file.
+root@DESKTOP-B7GM3C5:/mnt/c/Users/ycjang# exit
+logout
+PS C:\Users\ycjang> ubuntu
+root@DESKTOP-B7GM3C5:~# exit
+logout
+PS C:\Users\ycjang> ubuntu config --default-user jaoneol
+PS C:\Users\ycjang> ubuntu
+jaoneol@DESKTOP-B7GM3C5:~$
+```
+
 ## *Ubuntu Settings*
 
 - Let's change the root account password in Ubuntu.    
