--- a/_posts/2025-01-27-Docker1.md
+++ b/_posts/2025-01-27-Docker1.md
@@ -30,7 +30,8 @@ MS의 WSL문서(https://learn.microsoft.com/en-us/windows/wsl/) 기준으로 작
 ## *Install WSL2*
 
 - Install WSL2(default OS : Ubuntu)   
-	To use the command below, you must be running Windows 10 version 2004 or later (build 19041 or higher) or Windows 11([Installation page](https://learn.microsoft.com/en-us/windows/wsl/install)). If you are using an earlier version, refer to the [manual installation page](https://learn.microsoft.com/en-us/windows/wsl/install-manual). (See the screenshot below.)    
+	To use the command below, you must be running Windows 10 version 2004 or later (build 19041 or higher) or Windows 11([Installation page](https://learn.microsoft.com/en-us/windows/wsl/install)). If you're running an older build, or just prefer not to use the install command and would like step-by-step directions~~(in my case, I also had to install it manually due to company security policies, and additionally, proxy settings needed to be configured)~~, see **[WSL manual installation steps for older versions](https://learn.microsoft.com/en-us/windows/wsl/install-manual)**.
+
 	`wsl --install`        
 	`wsl --set-default-version 2(if the version is not 2)`
 
@@ -73,6 +74,37 @@ PS C:\Users\ycjang> wsl --set-default-version 2
 ![WSL2 Installation](/assets/img/2025-01-27-Docker1_3.png)
 _WSL2 Installation_
 
+- Once Ubuntu installation on WSL is complete, running `uname -a` usually displays the Linux kernel version. To check the exact Ubuntu version, use the following command:    
+	`lsb_release -a`    
+	`cat /etc/os-release`
+
+<!--
+WSL로 Ubuntu 설치가 완료되면 보통 uname -a 를 통해서는 Linux의 커널 버전이 나온다. 정확한 Ubuntu 버전을 알기 위해서는 아래 명령어를 사용하자.
+-->
+
+```bash
+jaoneol@DESKTOP-B7GM3C5:~$ lsb_release -a
+No LSB modules are available.
+Distributor ID: Ubuntu
+Description:    Ubuntu 24.04.1 LTS
+Release:        24.04
+Codename:       noble
+jaoneol@DESKTOP-B7GM3C5:~$ cat /etc/os-release
+PRETTY_NAME="Ubuntu 24.04.1 LTS"
+NAME="Ubuntu"
+VERSION_ID="24.04"
+VERSION="24.04.1 LTS (Noble Numbat)"
+VERSION_CODENAME=noble
+ID=ubuntu
+ID_LIKE=debian
+HOME_URL="https://www.ubuntu.com/"
+SUPPORT_URL="https://help.ubuntu.com/"
+BUG_REPORT_URL="https://bugs.launchpad.net/ubuntu/"
+PRIVACY_POLICY_URL="https://www.ubuntu.com/legal/terms-and-policies/privacy-policy"
+UBUNTU_CODENAME=noble
+LOGO=ubuntu-logo
+```
+
 ## *Change the default path of WSL2*
 
 The default path for the virtual environment that constitutes WSL is the C drive. If the C drive has limited space, it can restrict Docker image storage. Therefore, I want to change the default path to a specific directory on the D drive.
@@ -108,6 +140,9 @@ https://github.com/pxlrbt/move-wsl
 PS C:\Users\ycjang> wsl -l -v
   NAME      STATE           VERSION
 * Ubuntu    Running         2
+# You can use the command below, 
+# or if you close all WSL Ubuntu windows and wait for a while, 
+# it will change to "Stopped."
 PS C:\Users\ycjang> wsl --shutdown
 PS C:\Users\ycjang> wsl -l -v
   NAME      STATE           VERSION
