--- a/_posts/2025-01-28-Docker2.md
+++ b/_posts/2025-01-28-Docker2.md
@@ -120,7 +120,7 @@ Server: Docker Engine - Community
 jaoneol@DESKTOP-B7GM3C5:~$
 ```
 
-- [Option]Manage Docker as a non-root user
+- Manage Docker as a non-root user
 	The Docker daemon binds to a Unix socket, not a TCP port. By default it's the root user that owns the Unix socket, and other users can only access it using sudo. The Docker daemon always runs as the root user.    
 	`usermod -a -G docker jaoneol`
 
