--- a/_posts/2025-01-28-Docker2.md
+++ b/_posts/2025-01-28-Docker2.md
@@ -6,19 +6,19 @@ date: 2025-01-28 11:00:00 +0000
 categories:
   - Docker
 tags:
-  - WSL2
+  - WSL
   - Ubuntu
   - Docker
 math: true
 pin: true
 ---
 
-Due to Docker Desktop's monetization policy (as of August 31, 2021), companies with more than 250 employees or annual revenue exceeding $10 million cannot use it. Since I fall into this category, I plan to install Docker using a different method. (If I get the chance, I will write a post on utilizing Docker Desktop.) In the previous post, we installed WSL2, and now we aim to set up a Docker environment without Docker Desktop.    
+Due to Docker Desktop's monetization policy (as of August 31, 2021), companies with more than 250 employees or annual revenue exceeding $10 million cannot use it. Since I fall into this category, I plan to install Docker using a different method. (If I get the chance, I will write a post on utilizing Docker Desktop.) In the previous post, we installed WSL, and now we aim to set up a Docker environment without Docker Desktop.    
 This document is based on docker documentation ([https://docs.docker.com/engine/install/ubuntu/](https://docs.docker.com/engine/install/ubuntu/)).
 
 <!--
 도커 데스크톱(Docker Desktop) 유료화 정책(2021년 8월 31일)으로 250명 이상의 직원을 보유하거나 연 매출이 1,000만 달러를 초과하는 기업에서는 사용이 불가능하다. 나의 경우도 여기에 해당되어 다른 방법으로 Docker 설치하려한다.(기회가 된다면 Docker Desktop을 활용하는 글을 쓰겠다.)
-앞서 나는 WSL2을 설치했는데 Docker Desktop 없이 Docker 환경을 구축하고자 한다.
+앞서 나는 WSL을 설치했는데 Docker Desktop 없이 Docker 환경을 구축하고자 한다.
 
 docker의 문서(https://docs.docker.com/engine/install/ubuntu/) 기준으로 작성되었습니다.
 -->
@@ -89,6 +89,7 @@ Client: Docker Engine - Community
 permission denied while trying to connect to the Docker daemon socket at unix:///var/run/docker.sock: Get "http://%2Fvar%2Frun%2Fdocker.sock/v1.47/version": dial unix /var/run/docker.sock: connect: permission denied
 # Solution for "permission denied"
 jaoneol@DESKTOP-B7GM3C5:~$ sudo chmod 666 /var/run/docker.sock
+# Very important!
 jaoneol@DESKTOP-B7GM3C5:~$ docker version
 Client: Docker Engine - Community
  Version:           27.5.1
