--- a/_posts/2025-01-27-Docker1-Add1.md
+++ b/_posts/2025-01-27-Docker1-Add1.md
@@ -13,7 +13,7 @@ math: true
 pin: true
 ---
 
-In WSL (Windows Subsystem for Linux), Ubuntu is managed and stored in a virtual disk file called `ext4.vhdx`. Since I plan to conduct various tests, there will be times when I need to revert to a previous version. <ins>VirtualBox provides a snapshot feature, but unfortunately</ins>, WSL does not. Therefore, I will **use WSL's export and import functions to manage system versions**.
+In WSL (Windows Subsystem for Linux), Ubuntu is managed and stored in a virtual disk file called `ext4.vhdx`. Since I plan to conduct various tests, there will be times when I need to revert to a previous version. <ins>VirtualBox provides a snapshot feature, but unfortunately, WSL does not.</ins>Therefore, I will **use WSL's export and import functions to manage system versions**.
 
 <!--
 WSL(Windows Subsystem for Linux)에서 Ubuntu는 가상 디스크 파일인 ext4.vhdx에 저장이 되어서 관리되고 있다. 나는 앞으로 다양한 테스트를 시도할 것인데, 과거 버전으로 원복이 필요할 때가 발생할 것이다. VirtualBox는 스냅샷 기능을 지원하는데, 안타깝게도 WSL은 그런 기능을 지원하지 않는다. 그래서 wsl의 export와 import 기능을 통해 형상 관리를 하겠다.
