--- a/_posts/2025-01-27-Docker1.md
+++ b/_posts/2025-01-27-Docker1.md
@@ -317,13 +317,13 @@ Signed-By: /usr/share/keyrings/ubuntu-archive-keyring.gpg
 ```
 
 - Let's check the wsl's configure(`/etc/wsl.conf`) to use 'systemd'
-	`systemd(system daemon)` is a daemon that replaces the init process by being the first to be created after a Unix system boots and then executing other processes.    
-	In Ubuntu 24.04, systemd is enabled by default, but it is not in older versions. This was included for verification purposes. If `ps -p 1 -o comm=` does not return `systemd`, the `systemctl` command will not work. Keep this in mind.    		
+	`systemd(system daemon)` is <ins>a daemon that replaces the init process</ins> by being the first to be created after a Unix system boots and then executing other processes.    
+	In Ubuntu 24.04, systemd is enabled by default, but it is not in older versions(Version 22.04 and older). This was included for verification purposes. If `ps -p 1 -o comm=` does not return `systemd`, the `systemctl` command will not work. Keep this in mind.    		
 	Add `[boot] systemd=true` to `/etc/wsl.conf`.
 
 <!--
 systemd(system daemon)은 Unix 시스템이 부팅후에 가장 먼저 생성된 후에 다른 프로세스를 실행하는 init 역할을 대체하는 데몬입니다
-Ubuntu-24.04에는 기본적으로 systemd가 활성화 되어 있으나, 과거 버전은 안되어 있다. 확인차 넣어둔 내용이다. 만약 ps -p 1 -o comm= 에서 systemd가 안되어 있으면 systemctl 명령어가 동작하지 않는다. 유의해라.
+Ubuntu-24.04에는 기본적으로 systemd가 활성화 되어 있으나, 과거 버전(22.04 포함 과거 버전)은 안되어 있다. 확인차 넣어둔 내용이다. 만약 ps -p 1 -o comm= 에서 systemd가 안되어 있으면 systemctl 명령어가 동작하지 않는다. 유의해라.
 -->
 
 ```bash
@@ -352,12 +352,6 @@ root         153       1  0 20:37 ?        00:00:00 /usr/lib/systemd/systemd-log
 jaoneol      322       1  0 20:37 ?        00:00:00 /usr/lib/systemd/systemd --user
 jaoneol@DESKTOP-B7GM3C5:~$
 ```
-
-
-<!--
-다음 내용은 추가적으로 확인하고 내용 보강하자.!
-필요 패키지 설치 : apt-get install -y ubuntu-restricted-extras net-tools git strongswan iperf ssh libssl-dev libncurses5 libncurses5-dev bin86 ftpd wireshark speedometer mpv vim cmake build-essential WSL 메모리 제한 (.wslconfig 파일 내용) : [wsl] memory=4GB
--->
 
 ## *Install Windows Terminal*
 
@@ -388,12 +382,15 @@ _Connection method_
 
 ## *Remove the Ubuntu Installed on WSL*
 
-To remove the installed Ubuntu from WSL, simply enter the command below for easy removal. However, be extremely careful, as this action is irreversible with a single command. The virtual disk file `ext4.vhdx` will be permanently deleted, so make sure to back it up before proceeding. (I will explain Import & Export in the next post.)
+To remove Ubuntu installed on WSL, simply enter the following command, and it will be easily removed. Additionally, you can search for "Ubuntu" in **Windows > Settings > Apps**, where the app will be listed—make sure to uninstall it from there as well.
+
+A very important caution: This process is irreversible with a single command. Since the virtual disk file (`ext4.vhdx`) will be deleted immediately, be sure to back it up before proceeding. (In the next post, I will explain Import & Export.)
 
 `wsl --unregister Ubuntu`        
 
 <!--
-WSL에서 설치된  Ubuntu를 제거하려면, 아래 명령만 입력하면 쉽게 제거가 됩니다. 매우 주의할 점은 한번의 명령으로 복구 자체가 불가능하다는 점입니다. 가상 디스크 파일인 ext4.vhdx 이 바로 삭제되므로 반드시 백업해주시고 진행바랍니다.(다음 글에서 Import & Export 설명할께요.)
+WSL에서 설치된  Ubuntu를 제거하려면, 아래 명령만 입력하면 쉽게 제거가 됩니다. 그리고 'Windows - 설정 - 앱'에서 Ubuntu를 검색하면 앱이 조회되는데 이 앱을 제거한다.
+매우 주의할 점은 한번의 명령으로 복구 자체가 불가능하다는 점입니다. 가상 디스크 파일인 ext4.vhdx 이 바로 삭제되므로 반드시 백업해주시고 진행바랍니다.(다음 글에서 Import & Export 설명할께요.)
 -->
 
 ```bash
