--- a/_posts/2024-11-01-MySQL1.md
+++ b/_posts/2024-11-01-MySQL1.md
@@ -1,6 +1,6 @@
 ---
-title: MySQL Installation and Configuration
-description: Let's install MySQL which are necessary for the LLM service(DS2Man).
+title: Accout creation, deletion, permission granting
+description: Let's check account information in MySQL.
 author: DS2Man
 date: 2024-11-01 11:00:00 +0000
 categories:
@@ -13,62 +13,56 @@ math: true
 pin: true
 ---
 
-Let's install MySQL which are necessary for the LLM service(DS2Man).
-
-<!--
-Let's install MySQL which are necessary for the LLM service(DS2Man).
--->
-
 ## *Account creation and deletion, permission granting*
 
-- Account creation and deletion
--
+1. **Account creation and deletion**
+
 <!--
 계정 생성 및 삭제
 -->
 
 ```sql
--- 외부 접근을 허용하는 사용자 추가
+-- Add a user that allows external access.
 create user 'user_id'@'%' identified by 'passwd';
 drop user 'user_id';
 
--- 내부 접근을 허용하는 사용자 추가
+-- Add a user that allows internal access.
 create user 'user_id'@'localhost' identified by 'passwd';
 drop user 'user_id';
 
--- 특정 ip만 접근을 허용하는 사용자 추가
+-- Add a user that allows access only from a specific IP
 create user 'user_id'@'123.456.789.100' identified by 'passwd';
 drop user 'user_id';
 
--- 특정 ip 대역을 허용하는 사용자 추가
+-- Add a user that allows access from a specific IP range
 create user 'user_id'@'192.168.%' identified by 'passwd';
 drop user 'user_id';
 ```
 
-- Account permission granting
--
+1. **Account permission granting**
+
 <!--
 사용자 권한 부여
 -->
 
 ```sql
--- 모든 데이터베이스의 모든 테이블에 모든 권한을 줌
+-- Grant all privileges on all tables of all databases.
 grant all privileges on *.* to 'user_id'@'%';
 flush privileges;
 
--- 특정 데이터베이스의 모든 테이블에 모든 권한을 줌
+-- Grant all privileges on all tables of a specific database.
 grant all privileges on 'db_name'.* to 'userid'@'%';
 flush privileges;
 
--- 특정 데이터베이스의 특정 테이블에 모든 권한을 줌
+-- Grant all privileges on a specific table of a specific database.
 grant all privileges on 'db_name'.'table_name' to 'userid'@'%';
 flush privileges;
 
--- 특정 데이터베이스의 특정 테이블에 select, insert 권한을 줌
+-- Grant `SELECT` and `INSERT` privileges on a specific table of a specific database.
 grant select, insert on 'db_name'.'table_name' to 'userid'@'%';
 flush privileges;
 
--- 특정 데이터베이스의 특정 테이블의 컬럼1과 컬럼2의 update 권한을 줌
-grant update(컬럼1, 컬럼2) on 'db_name'.'table_name' to 'userid'@'%';
+-- Grant `UPDATE` privileges on `column1` and `column2` of a specific table in a specific database.
+grant update(column1, column2) on 'db_name'.'table_name' to 'userid'@'%';
 flush privileges;
 ```
