--- a/_posts/2025-01-28-Docker2.md
+++ b/_posts/2025-01-28-Docker2.md
@@ -1,5 +1,5 @@
 ---
-title: Docker Engine on Ubuntu
+title: Docker & Docker-compose on Ubuntu
 description: Let's Install Docker Engine on Ubuntu.
 author: DS2Man
 date: 2025-01-28 11:00:00 +0000
@@ -164,4 +164,24 @@ Feb 01 21:43:54 DESKTOP-B7GM3C5 dockerd[253]: time="2025-02-01T21:43:54.64801884
 Feb 01 21:43:54 DESKTOP-B7GM3C5 dockerd[253]: time="2025-02-01T21:43:54.648175311+09:00" level=info msg="Daemon has completed initialization"
 Feb 01 21:43:54 DESKTOP-B7GM3C5 dockerd[253]: time="2025-02-01T21:43:54.682162247+09:00" level=info msg="API listen on /run/docker.sock"
 Feb 01 21:43:54 DESKTOP-B7GM3C5 systemd[1]: Started docker.service - Docker Application Container Engine.
+```
+
+## *Install Docker-compose on Ubuntu*
+
+- According to the documentation ([Installation methods](https://docs.docker.com/engine/install/ubuntu/)), there are three ways to install the Docker Engine. In this post, I will install it using the script method.    
+	`sudo curl -L "https://github.com/docker/compose/releases/latest/download/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose`    
+	`sudo chmod +x /usr/local/bin/docker-compose`        
+	`docker-compose --version`
+
+```bash
+(base) jaoneol@DESKTOP-B7GM3C5:~$ sudo curl -L "https://github.com/docker/compose/releases/latest/download/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current
+                                 Dload  Upload   Total   Spent    Left  Speed
+  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0
+  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0
+100 61.6M  100 61.6M    0     0  19.6M      0  0:00:03  0:00:03 --:--:-- 34.3M
+(base) jaoneol@DESKTOP-B7GM3C5:~$ sudo chmod +x /usr/local/bin/docker-compose
+(base) jaoneol@DESKTOP-B7GM3C5:~$ docker-compose --version
+Docker Compose version v2.32.4
+(base) jaoneol@DESKTOP-B7GM3C5:~$
 ```
