--- a/_posts/2025-01-28-Docker2.md
+++ b/_posts/2025-01-28-Docker2.md
@@ -166,7 +166,7 @@ Feb 01 21:43:54 DESKTOP-B7GM3C5 dockerd[253]: time="2025-02-01T21:43:54.68216224
 Feb 01 21:43:54 DESKTOP-B7GM3C5 systemd[1]: Started docker.service - Docker Application Container Engine.
 ```
 
-## *Install Docker-compose on Ubuntu*
+## *Install Docker-compose on Ubuntu(Ing...)*
 
 - According to the documentation ([Installation methods](https://docs.docker.com/engine/install/ubuntu/)), there are three ways to install the Docker Engine. In this post, I will install it using the script method.    
 	`sudo curl -L "https://github.com/docker/compose/releases/latest/download/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose`    
