--- a/_posts/2024-10-09-Docker3.md
+++ b/_posts/2024-10-09-Docker3.md
@@ -118,6 +118,7 @@ Thank you for installing Miniconda3!
 ```
 
 ```bash
+# The `source` command is useful for running scripts while maintaining the current shell environment.
 jaoneol@DESKTOP-B7GM3C5:~$ source ~/.bashrc
 (base) jaoneol@DESKTOP-B7GM3C5:~$
 ```
