--- a/_posts/2024-10-10-Docker4.md
+++ b/_posts/2024-10-10-Docker4.md
@@ -15,13 +15,13 @@ pin: true
 
 ## *Configure Git on Ubuntu*
 
-- Run the following command, `git config --global credential.helper store`  is  option to enter your account and password only once.
+- The Git package is already installed in Ubuntu 24.04.1 LTS. Once you configure `gitconfig`, the installation is complete. Run the following command, `git config --global credential.helper store`  is  option to enter your account and password(Token) only once.    
 	`git config --global user.email`      
 	`git config --global user.name "jaoneol"`      
 	`git config --global credential.helper store`
 
 <!--
-아래 명령어를 실행해라. `git config --global credential.helper store` 은 한번만 계정과 암호를 입력하게 하는 옵션이다.
+Ubuntu 24.04.1 LTS 버전에는 이미 Git이 설치되어 있다. gitconfig를 작성해주면 설치는 끝나게 된다.아래 명령어를 실행해라. `git config --global credential.helper store` 은 한번만 계정과 암호를 입력하게 하는 옵션이다.
 -->
 
 ```bash
