--- a/_posts/2024-11-01-MySQL1.md
+++ b/_posts/2024-11-01-MySQL1.md
@@ -3,8 +3,7 @@ title: Accout creation, deletion, permission granting
 description: Let's check account information in MySQL.
 author: DS2Man
 date: 2024-11-01 11:00:00 +0000
-categories:
-  - MySQL
+categories: [DB, MySQL]
 tags:
   - DB
   - RDB
