--- a/_posts/2024-10-09-Docker3.md
+++ b/_posts/2024-10-09-Docker3.md
@@ -3,8 +3,7 @@ title: MiniConda3 on Ubuntu
 description: Let's Install MiniConda3 on Ubuntu.
 author: DS2Man
 date: 2024-10-09 11:00:00 +0000
-categories:
-  - Docker
+categories:[Docker, Setup]
 tags:
   - WSL
   - Ubuntu
@@ -120,7 +119,7 @@ Thank you for installing Miniconda3!
 ```bash
 # The `source` command is useful for running scripts while maintaining the current shell environment.
 jaoneol@DESKTOP-B7GM3C5:~$ source ~/.bashrc
-(base) jaoneol@DESKTOP-B7GM3C5:~$
+(base) jaoneol@DESKTOP-B7GM3C5:~$   
 ```
 
 ```bash
@@ -132,5 +131,5 @@ conda 24.11.1
 #
 base                 * /home/jaoneol/miniconda3
 
-(base) jaoneol@DESKTOP-B7GM3C5:~$
+(base) jaoneol@DESKTOP-B7GM3C5:~$   
 ```
