--- a/_posts/2024-10-10-Docker4.md
+++ b/_posts/2024-10-10-Docker4.md
@@ -3,8 +3,7 @@ title: Git on Ubuntu
 description: Let's Install Git on Ubuntu.
 author: DS2Man
 date: 2024-10-10 11:00:00 +0000
-categories:
-  - Docker
+categories:[Docker, Setup]
 tags:
   - WSL
   - Ubuntu
