--- a/_posts/2024-10-07-Docker1-Add1.md
+++ b/_posts/2024-10-07-Docker1-Add1.md
@@ -3,8 +3,7 @@ title: Linux(Ubuntu), Export & Import
 description: Let's manage Ubuntu history, just like snapshots in VirtualBox.
 author: DS2Man
 date: 2024-10-07 12:00:00 +0000
-categories:
-  - Docker
+categories:[Docker, Setup]
 tags:
   - WSL
   - Ubuntu
