--- a/_posts/2024-10-08-Docker2.md
+++ b/_posts/2024-10-08-Docker2.md
@@ -3,8 +3,7 @@ title: Docker Engine on Ubuntu
 description: Let's Install Docker Engine on Ubuntu.
 author: DS2Man
 date: 2024-10-08 11:00:00 +0000
-categories:
-  - Docker
+categories:[Docker, Setup]
 tags:
   - WSL
   - Ubuntu
@@ -118,7 +117,7 @@ Server: Docker Engine - Community
  docker-init:
   Version:          0.19.0
   GitCommit:        de40ad0
-jaoneol@DESKTOP-B7GM3C5:~$
+jaoneol@DESKTOP-B7GM3C5:~$ 
 ```
 
 - Manage Docker as a non-root user
