--- a/_posts/2024-10-11-Docker5.md
+++ b/_posts/2024-10-11-Docker5.md
@@ -76,9 +76,8 @@ While Docker shares similarities with LXC, there are clear differences. The tabl
 앞서 말한 LXC는 격리된 환경을 제공하기는 했으나, 실질적으로 그 안에서 서비스를 운영하기 위한 기능이 부족했습니다. 도커는 cgroups와 namespaces를 기반으로 하면서도 이미지와 컨테이너 관리 등의 다양한 기능들을 제공함으로써 실질적으로 필요한 기능들을 제공합니다. 도커를 사용하면 CPU와 메모리의 할당량이 각각 격리된 컨테이터라는 환경으로 구분할 수 있다. 이것이 가능한 이유는 앞서 말한 리눅스 커널의 **cgroups, namespace** 기능이 사용되기 때문이다.
 
 도커는 LXC와 마찬가지로 하나의 OS를 통해 여러 컨테이너를 구동시킨다. 따라서 각 프로세스마다 게스트 OS를 설치(Virtual Machine)할 필요도 없고, 하드웨어 자원을 사용하기 위한 시스템 콜 절차도 비교적 간단하다. 가상화에 비해 가벼운 가상화 기술을 제공하는 도커는 가볍기 때문에 확장성이 용이하다. 내가 필요한 기능이 있다면 얼마든지 컨테이너로 만들고, 필요없다면 손쉽게 삭제할 수 있기 때문이다.
-
 LXC와 유사하면서도  차이점은 분명히 있다. 아래 표에 정리해 보았다.
 -->
 
 ![Docker](/assets/img/2024-10-11-Docker5_3.png)
-_Docker containers(Source: [docker](https://www.docker.com/resources/what-container/))__
+_Docker containers(Source: [Docker](https://www.docker.com/resources/what-container/))_
